# fastapi-large-app-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTORS.txt  Dockerfile  Dockerfile.k8s  LICENSE  Makefile  README.md  docker-compose.yml  gunicorn_conf.py  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  run.sh  set_env.sh
.github/workflows/: ci.yml  update-readme.yml
app/: database.py  main.py  settings.py
app/alembic/: env.py
app/alembic/versions/: 03fe451bc9eb_create_user_todo_tables.py  35367cb20885_create_user_todo_tables.py  6579d913a605_set_not_null_on_timestamp_and_boolean_.py  a1b2c3d4e5f6_add_todo_pagination_index.py  e758cbdc2fd0_add_timezone_to_timestamp_columns.py  f59234576efa_create_user_todo_tables.py
app/api/: deps.py  health_router.py  todo_router.py  user_router.py
app/core/: auth.py  context.py  database.py  enums.py  exceptions.py  health_check.py  logging_config.py  middleware.py  models.py  schemas.py  settings.py  utils.py
app/crud/: todo_crud.py  user_crud.py
app/health/: health_router.py
app/models/: todo_model.py  user_model.py
app/observability/: cache_metrics.py  db_metrics.py  metrics.py  middleware.py  telemetry.py
app/schemas/: health_schema.py  todo_schema.py  user_schema.py
app/services/: todo_service.py  user_service.py
app/todo/: todo_crud.py  todo_model.py  todo_router.py  todo_schema.py  todo_service.py
app/user/: user_auth.py  user_crud.py  user_model.py  user_router.py  user_schema.py  user_service.py
app/utils/: auth_dependency.py  rate_limiter.py
docker/observability/: README.md  docker-compose.yml  otel-collector.yaml  prometheus.yaml  tempo.yaml
docs/: OBSERVABILITY.md  grafana-dashboard.json
k8s/: README.md  namespace.yaml
k8s/app/: configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml  service.yaml
k8s/base/: kustomization.yaml
k8s/base/app/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  network-policy.yaml  (+2 more)
k8s/jobs/: migration.yaml
tests/: conftest.py  factories.py  test_health.py
tests/e2e/: test_flows.py
tests/integration/: test_todo_api.py  test_user_api.py
tests/unit/: test_auth.py  test_config.py  test_health_check.py  test_property_based.py  test_rate_limiter.py  test_todo_service.py  test_user_service.py
(+14 files in other folders)
