[project]
name = "fastapi-large-app-template"
version = "1.0.0"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.121.1",
  "uvicorn[standard]>=0.30.0",
  "SQLAlchemy>=2.0.44",
  "alembic>=1.17.1",
  "python-decouple==3.8",
  "gunicorn>=22.0.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.11",
  "openai>=2.7.2",
  "PyJWT>=2.9.0",
  "bcrypt==4.0.1",
  "passlib==1.7.4",
  "pydantic>=2.8.0",
  "email-validator>=2.2.0",
  "fastapi-limiter>=0.1.6",
  "redis>=6.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.0"
]